parser/parser.out
Created by PLY version 3.6 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS
    TYPE

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression PLUS expression
Rule 2     expression -> expression MINUS expression
Rule 3     expression -> expression TIMES expression
Rule 4     expression -> expression DIVISION expression
Rule 5     expression -> expression GETHAN expression
Rule 6     expression -> expression LETHAN expression
Rule 7     expression -> expression EQUAL expression
Rule 8     expression -> expression DIFFERENT expression
Rule 9     expression -> expression GTHAN expression
Rule 10    expression -> expression LTHAN expression
Rule 11    expression -> expression AND expression
Rule 12    expression -> expression OR expression
Rule 13    expression -> MINUS expression
Rule 14    expression -> IF expression THEN expression ELSE expression
Rule 15    expression -> IF expression THEN expression
Rule 16    expression -> WHILE expression DO expression
Rule 17    expression -> FOR ID ASSIGN expression TO expression DO expression
Rule 18    expression -> LET decls IN sequence END
Rule 19    decls -> decl
Rule 20    decls -> decls decl
Rule 21    decl -> VAR ID ASSIGN expression
Rule 22    decl -> VAR ID COLON ID ASSIGN expression
Rule 23    parameters -> <empty>
Rule 24    parameters -> param
Rule 25    parameters -> parameters COMMA param
Rule 26    param -> ID COLON ID
Rule 27    decl -> FUNCTION ID LPAREN parameters RPAREN EQUAL expression
Rule 28    decl -> FUNCTION ID LPAREN parameters RPAREN COLON ID EQUAL expression
Rule 29    paramscall -> <empty>
Rule 30    paramscall -> paramcall
Rule 31    paramscall -> paramscall COMMA paramcall
Rule 32    paramcall -> expression
Rule 33    expression -> ID LPAREN paramscall RPAREN
Rule 34    expression -> LPAREN expression RPAREN
Rule 35    sequence -> <empty>
Rule 36    sequence -> expression
Rule 37    sequence -> sequence SEMICOLON expression
Rule 38    expression -> LPAREN sequence RPAREN
Rule 39    expression -> ID ASSIGN expression
Rule 40    expression -> NUMBER
Rule 41    expression -> ID

Terminals, with rules where they appear

AND                  : 11
ASSIGN               : 17 21 22 39
COLON                : 22 26 28
COMMA                : 25 31
DIFFERENT            : 8
DIVISION             : 4
DO                   : 16 17
ELSE                 : 14
END                  : 18
EQUAL                : 7 27 28
FOR                  : 17
FUNCTION             : 27 28
GETHAN               : 5
GTHAN                : 9
ID                   : 17 21 22 22 26 26 27 28 28 33 39 41
IF                   : 14 15
IN                   : 18
LET                  : 18
LETHAN               : 6
LPAREN               : 27 28 33 34 38
LTHAN                : 10
MINUS                : 2 13
NUMBER               : 40
OR                   : 12
PLUS                 : 1
RPAREN               : 27 28 33 34 38
SEMICOLON            : 37
THEN                 : 14 15
TIMES                : 3
TO                   : 17
TYPE                 : 
UMINUS               : 
VAR                  : 21 22
WHILE                : 16
error                : 

Nonterminals, with rules where they appear

decl                 : 19 20
decls                : 18 20
expression           : 1 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 11 12 12 13 14 14 14 15 15 16 16 17 17 17 21 22 27 28 32 34 36 37 39 0
param                : 24 25
paramcall            : 30 31
parameters           : 25 27 28
paramscall           : 31 33
sequence             : 18 37 38

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 3

state 1

    (16) expression -> WHILE . expression DO expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 10

state 2

    (33) expression -> ID . LPAREN paramscall RPAREN
    (39) expression -> ID . ASSIGN expression
    (41) expression -> ID .

    LPAREN          shift and go to state 12
    ASSIGN          shift and go to state 11
    PLUS            reduce using rule 41 (expression -> ID .)
    MINUS           reduce using rule 41 (expression -> ID .)
    TIMES           reduce using rule 41 (expression -> ID .)
    DIVISION        reduce using rule 41 (expression -> ID .)
    GETHAN          reduce using rule 41 (expression -> ID .)
    LETHAN          reduce using rule 41 (expression -> ID .)
    EQUAL           reduce using rule 41 (expression -> ID .)
    DIFFERENT       reduce using rule 41 (expression -> ID .)
    GTHAN           reduce using rule 41 (expression -> ID .)
    LTHAN           reduce using rule 41 (expression -> ID .)
    AND             reduce using rule 41 (expression -> ID .)
    OR              reduce using rule 41 (expression -> ID .)
    $end            reduce using rule 41 (expression -> ID .)
    DO              reduce using rule 41 (expression -> ID .)
    THEN            reduce using rule 41 (expression -> ID .)
    RPAREN          reduce using rule 41 (expression -> ID .)
    SEMICOLON       reduce using rule 41 (expression -> ID .)
    COMMA           reduce using rule 41 (expression -> ID .)
    ELSE            reduce using rule 41 (expression -> ID .)
    END             reduce using rule 41 (expression -> ID .)
    TO              reduce using rule 41 (expression -> ID .)
    IN              reduce using rule 41 (expression -> ID .)
    VAR             reduce using rule 41 (expression -> ID .)
    FUNCTION        reduce using rule 41 (expression -> ID .)


state 3

    (0) S' -> expression .
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVISION expression
    (5) expression -> expression . GETHAN expression
    (6) expression -> expression . LETHAN expression
    (7) expression -> expression . EQUAL expression
    (8) expression -> expression . DIFFERENT expression
    (9) expression -> expression . GTHAN expression
    (10) expression -> expression . LTHAN expression
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression

    PLUS            shift and go to state 24
    MINUS           shift and go to state 20
    TIMES           shift and go to state 13
    DIVISION        shift and go to state 15
    GETHAN          shift and go to state 14
    LETHAN          shift and go to state 16
    EQUAL           shift and go to state 21
    DIFFERENT       shift and go to state 17
    GTHAN           shift and go to state 23
    LTHAN           shift and go to state 18
    AND             shift and go to state 22
    OR              shift and go to state 19


state 4

    (14) expression -> IF . expression THEN expression ELSE expression
    (15) expression -> IF . expression THEN expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 25

state 5

    (13) expression -> MINUS . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 26

state 6

    (40) expression -> NUMBER .

    PLUS            reduce using rule 40 (expression -> NUMBER .)
    MINUS           reduce using rule 40 (expression -> NUMBER .)
    TIMES           reduce using rule 40 (expression -> NUMBER .)
    DIVISION        reduce using rule 40 (expression -> NUMBER .)
    GETHAN          reduce using rule 40 (expression -> NUMBER .)
    LETHAN          reduce using rule 40 (expression -> NUMBER .)
    EQUAL           reduce using rule 40 (expression -> NUMBER .)
    DIFFERENT       reduce using rule 40 (expression -> NUMBER .)
    GTHAN           reduce using rule 40 (expression -> NUMBER .)
    LTHAN           reduce using rule 40 (expression -> NUMBER .)
    AND             reduce using rule 40 (expression -> NUMBER .)
    OR              reduce using rule 40 (expression -> NUMBER .)
    $end            reduce using rule 40 (expression -> NUMBER .)
    DO              reduce using rule 40 (expression -> NUMBER .)
    THEN            reduce using rule 40 (expression -> NUMBER .)
    RPAREN          reduce using rule 40 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 40 (expression -> NUMBER .)
    COMMA           reduce using rule 40 (expression -> NUMBER .)
    ELSE            reduce using rule 40 (expression -> NUMBER .)
    END             reduce using rule 40 (expression -> NUMBER .)
    TO              reduce using rule 40 (expression -> NUMBER .)
    IN              reduce using rule 40 (expression -> NUMBER .)
    VAR             reduce using rule 40 (expression -> NUMBER .)
    FUNCTION        reduce using rule 40 (expression -> NUMBER .)


state 7

    (18) expression -> LET . decls IN sequence END
    (19) decls -> . decl
    (20) decls -> . decls decl
    (21) decl -> . VAR ID ASSIGN expression
    (22) decl -> . VAR ID COLON ID ASSIGN expression
    (27) decl -> . FUNCTION ID LPAREN parameters RPAREN EQUAL expression
    (28) decl -> . FUNCTION ID LPAREN parameters RPAREN COLON ID EQUAL expression

    VAR             shift and go to state 30
    FUNCTION        shift and go to state 27

    decls                          shift and go to state 28
    decl                           shift and go to state 29

state 8

    (17) expression -> FOR . ID ASSIGN expression TO expression DO expression

    ID              shift and go to state 31


state 9

    (34) expression -> LPAREN . expression RPAREN
    (38) expression -> LPAREN . sequence RPAREN
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID
    (35) sequence -> .
    (36) sequence -> . expression
    (37) sequence -> . sequence SEMICOLON expression

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6
    RPAREN          reduce using rule 35 (sequence -> .)
    SEMICOLON       reduce using rule 35 (sequence -> .)

    expression                     shift and go to state 32
    sequence                       shift and go to state 33

state 10

    (16) expression -> WHILE expression . DO expression
    (1) expression -> expression . PLUS expression
    (2) expression -> expression . MINUS expression
    (3) expression -> expression . TIMES expression
    (4) expression -> expression . DIVISION expression
    (5) expression -> expression . GETHAN expression
    (6) expression -> expression . LETHAN expression
    (7) expression -> expression . EQUAL expression
    (8) expression -> expression . DIFFERENT expression
    (9) expression -> expression . GTHAN expression
    (10) expression -> expression . LTHAN expression
    (11) expression -> expression . AND expression
    (12) expression -> expression . OR expression

    DO              shift and go to state 34
    PLUS            shift and go to state 24
    MINUS           shift and go to state 20
    TIMES           shift and go to state 13
    DIVISION        shift and go to state 15
    GETHAN          shift and go to state 14
    LETHAN          shift and go to state 16
    EQUAL           shift and go to state 21
    DIFFERENT       shift and go to state 17
    GTHAN           shift and go to state 23
    LTHAN           shift and go to state 18
    AND             shift and go to state 22
    OR              shift and go to state 19


state 11

    (39) expression -> ID ASSIGN . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 35

state 12

    (33) expression -> ID LPAREN . paramscall RPAREN
    (29) paramscall -> .
    (30) paramscall -> . paramcall
    (31) paramscall -> . paramscall COMMA paramcall
    (32) paramcall -> . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    RPAREN          reduce using rule 29 (paramscall -> .)
    COMMA           reduce using rule 29 (paramscall -> .)
    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 36
    paramcall                      shift and go to state 38
    paramscall                     shift and go to state 37

state 13

    (3) expression -> expression TIMES . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 39

state 14

    (5) expression -> expression GETHAN . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 40

state 15

    (4) expression -> expression DIVISION . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 41

state 16

    (6) expression -> expression LETHAN . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 42

state 17

    (8) expression -> expression DIFFERENT . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 43

state 18

    (10) expression -> expression LTHAN . expression
    (1) expression -> . expression PLUS expression
    (2) expression -> . expression MINUS expression
    (3) expression -> . expression TIMES expression
    (4) expression -> . expression DIVISION expression
    (5) expression -> . expression GETHAN expression
    (6) expression -> . expression LETHAN expression
    (7) expression -> . expression EQUAL expression
    (8) expression -> . expression DIFFERENT expression
    (9) expression -> . expression GTHAN expression
    (10) expression -> . expression LTHAN expression
    (11) expression -> . expression AND expression
    (12) expression -> . expression OR expression
    (13) expression -> . MINUS expression
    (14) expression -> . IF expression THEN expression ELSE expression
    (15) expression -> . IF expression THEN expression
    (16) expression -> . WHILE expression DO expression
    (17) expression -> . FOR ID ASSIGN expression TO expression DO expression
    (18) expression -> . LET decls IN sequence END
    (33) expression -> . ID LPAREN paramscall RPAREN
    (34) expression -> . LPAREN expression RPAREN
    (38) expression -> . LPAREN sequence RPAREN
    (39) expression -> . ID ASSIGN expression
    (40) expression -> . NUMBER
    (41) expression -> . ID

    MINUS           shift and go to state 5
    IF              shift and go to state 4
    WHILE           shift and go to state 1
    FOR             shift and go to state 8
    LET             shift and go to state 7
    ID              shift and go to state 2
    LPAREN          shift and go to state 9
    NUMBER          shift and go to state 6

    expression                     shift and go to state 44

state 19
